--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,10 @@ p {
     color: #333;
 }
 
+.clr {
+    clear: both;
+}
+
 /* Navbar */
 #navbar {
     background: #333;
@@ -169,4 +173,12 @@ p {
 
 .box i {
     margin-bottom: 10px;
+}
+
+/* Footer */
+#main-footer {
+    text-align: center;
+    background: #444;
+    color: #fff;
+    padding: 20px;
 }
